# magnetic_field_localization

./: CMakeLists.txt  package.xml
launch/: localization_lpms.launch  mrs.launch  mrs_8_vectors_real.launch  mrs_localization_lis.launch  mrs_localization_optim.launch  three_vectors.launch  three_vectors_LIS3MD.launch  three_vectors_lpms.launch  two_vectors.launch  two_vectors_sim.launch
src/: common.h  magnetic_field_localization.cpp  magnetic_field_localization_one_wire_optim.cpp  magnetic_field_localization_two_wire.cpp  magnetic_field_localization_two_wire_lis.cpp  magnetic_field_vector_fast.cpp  magnetic_field_vector_lis.cpp
tmux/: session.yml  start.sh
